--- a/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.cs.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Admin webové stránky</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>Agents</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Všechno</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Povolit nebo zakázat Gods</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>umožňují Gods</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Dovolit položky k odchodu</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Bird Module</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>ptactvo</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Bird Flock Size</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Dále jen ‚Vítejte‘ Výchozí oblast není v systému nalezen. Pokračovat?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Delete</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>vypouští</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS Name &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Neměňte, pokud již byla vytvořena databáze</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Chyba: Nelze spustit Downloader.exe. Možná, že si můžete spustit manuálně.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>Majetek</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Estate Manager je bůh</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Složky pro ukládání souborů</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Frame Rate (0,9)</value>
+    <value>Frame Rate (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Výchozí 1/11 sec. Výchozí hodnota je 0,091, což je 1 / 5th 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>Tento rošt je Friendly Name</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL provozuje 55 FPS. Opensim je 11 FPS. Výchozí = 0,9, nebo 1/11</value>
+    <value>SL provozuje 55 FPS. Opensim je 11 FPS. Výchozí = 0,0909, nebo 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Aktiva ve formě souborů</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Good (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>prohlížeč Pozdrav</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>adresa Grid</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Globální Tide settungs budou vztahovat k tomuto regionu</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>Globální nastavení Tide se vztahují na tuto oblast, pokud set</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Aktualizace je k dispozici. Chcete ukončit DreamGrid a nainstalovat aktualizaci?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Uchovávat několik dní</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Jazyk</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Používáte LAN IP. Tento test je přeskočen.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Vytvořit zálohu?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>Bůh manažer</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Mapy</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>next Name</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Žádná osoba je on-line</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Žádný</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>oblasti normalizovat</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>Offline</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>OK</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Je tam jeden avatar</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Přepíše globální nastavení mapy pro tento jeden region</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>majitel Bůh</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>balíky</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>oprávnění</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fyzika</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>neočekávaně. Restartu.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>RAM</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Soubory čtení Kraj</value>
@@ -1777,10 +1819,10 @@
     <value>mezipaměť skript</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Script Timer Rate (0,9)</value>
+    <value>Script Timer Rate (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Nastavení rychlosti časovače Script. 1/11 druhý je výchozí (0,9)</value>
+    <value>Nastavení rychlosti časovače Script. 1/11 druhý je výchozí (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Vyhledávání</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim Size</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Velikost</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Přeskočit</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Postavení</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Nastavení rychlosti časovače Script. 1/11 druhý je výchozí (0,9)</value>
+    <value>Nastavení rychlosti časovače Script. 1/11 druhý je výchozí (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Krok 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>teleportuje</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Poradce při potížích</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Typ</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit ODE / Bullet Hybrid</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Výchozí hodnota: Enabled. Uživatelé mohou potřebovat ke snížení šířky pásma diváka když některé prims nebo terénní části nepodaří rez. Nastavte na hodnotu false, pokud potřebujete používat staré diváky, které nemají tuto funkci podporují</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>prohlížeč Pozdrav</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Divák se zastaví počítání na 45.000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Něco je s Internetem v pořádku</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Ano</value>
   </data>
 </root>
