--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Admin webbsida</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>agenter</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Allt</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Tillåta eller inte tillåta Gods</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>tillåter Gods</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Låt objekt att lämna</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Bird Module</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>Fåglar</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Bird Flock storlek</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Standard 'Välkommen' region inte finns i systemet. Fortsätta?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Radera</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>raderade</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS-namn &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Ändra inte om databasen har redan skapats</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Fel: Det gick inte att starta Downloader.exe. Kanske kan du starta den manuellt.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>Egendom</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Estate Manager är gud</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Mapp att spara till</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Bildhastighet (0,9)</value>
+    <value>Bildhastighet (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Standard 1/11 sek. Standard är 0,091 vilket är en / 5:e av 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>Denna Grid vänliga namn</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL körs 55 FPS. Opensim är 11 FPS. Default = 0,9, eller 1/11</value>
+    <value>SL körs 55 FPS. Opensim är 11 FPS. Default = 0,0909, eller 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Tillgångar som filer</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Bra (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>Viewer hälsning</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>Grid-adress</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>De globala Tide settungs kommer att gälla för denna region</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>De globala Tide inställningarna kommer att gälla för denna region om set</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Uppdatering finns tillgänglig. Vill du avsluta DreamGrid och installera uppdateringen?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Håll i dagar</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Språk</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Du använder en LAN IP. Detta test är överhoppade.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Gör en backup?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>chef Gud</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Kartor</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>Nästa namn</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Ingen person är inte uppkopplad</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Ingen</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>Normalisera Regioner</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>Off-line</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Ok</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Det finns en avatar</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Åsidosätter den globala kartan Inställningar för en region</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>ägare Gud</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>paket</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>Behörigheter</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fysik</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>avslutas oväntat. Omstart.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>Bagge</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Läsa Region filer</value>
@@ -1777,10 +1819,10 @@
     <value>script cache</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Script Timer Rate (0,9)</value>
+    <value>Script Timer Rate (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Script timer hastighetsinställning. 1/11 sekund är standard (0,9)</value>
+    <value>Script timer hastighetsinställning. 1/11 sekund är standard (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Sök</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim Size</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Storlek</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Hoppa</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Status</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Script timer hastighetsinställning. 1/11 sekund är standard (0,9)</value>
+    <value>Script timer hastighetsinställning. 1/11 sekund är standard (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Steg 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>Teleporting</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Felsökning</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Typ</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>UBIT ODE / Bullet Hybrid</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Standard: Enabled. Användare kan behöva minska viewer bandbredd om vissa Prims eller terräng delar inte rez. Byt till false om du behöver använda gamla tittare som inte stöder denna funktion</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>Viewer hälsning</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Viewer slutar räkna på 45.000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Något är fel med Internet</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Ja</value>
   </data>
 </root>
