--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Página de administración Web</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>agentes</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Todas</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Permitir o no permitir dioses</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>Permitir dioses</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Permita que los artículos salen</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Módulo de aves</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>Aves</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Bandada Tamaño</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>La región por defecto 'Bienvenido' no se encuentra en el sistema. ¿Hacer continuación?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Eliminar</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>Suprimido</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>Nombre DNS y Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>Caja DOS</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>No cambie a menos que ya se ha creado la base de datos</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Error: No podría Lance Downloader.exe. Tal vez se puede poner en marcha de forma manual.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>Inmuebles</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Estate Manager es dios</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Carpeta para guardar a</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Velocidad de cuadros (0,9)</value>
+    <value>Velocidad de cuadros (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Por defecto 1/11 seg. El valor predeterminado es 0.091 que es 1 / quinto de 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>Nombre descriptivo de este cuadrícula</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL corre 55 FPS. Opensim es de 11 FPS. Por defecto = 0,9, o 1/11</value>
+    <value>SL corre 55 FPS. Opensim es de 11 FPS. Por defecto = 0,0909, o 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Activos como archivos</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Bueno (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>saludo visor</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>dirección de rejilla</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Los settungs globales de marea se aplicarán a esta región</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>La configuración global de marea se aplicarán a esta región si se ha ajustado</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Actualización disponible. ¿Quieres salir DreamGrid e instalar la actualización?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Mantener durante días</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Idioma</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Está utilizando un IP de la LAN. Esta prueba es omitida.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>¿Hacer una copia de seguridad?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>Dios gerente</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>mapas</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>Siguiente Nombre</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Ninguna persona está en línea</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Ninguna</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>Normalizar Regiones</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>Desconectado</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Okay</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Hay un avatar</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Anula la configuración de mapa global de esta una región</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>propietario Dios</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>parcelas</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>permisos</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Física</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>cerrarse de forma inesperada. El reinicio.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>RAM</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>archivos de zona de lectura</value>
@@ -1777,10 +1819,10 @@
     <value>caché de la escritura</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Guión temporizador Rate (0,9)</value>
+    <value>Guión temporizador Rate (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>ajuste de velocidad temporizador guión. 1/11 segundos es predeterminado (0,9)</value>
+    <value>ajuste de velocidad temporizador guión. 1/11 segundos es predeterminado (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Buscar</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim Tamaño</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Talla</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Omitir</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Estado</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>ajuste de velocidad temporizador guión. 1/11 segundos es predeterminado (0,9)</value>
+    <value>ajuste de velocidad temporizador guión. 1/11 segundos es predeterminado (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Paso 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>teleporting</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Solución de problemas</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Tipo</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit ODE / bala híbrido</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Por defecto: Activado. Los usuarios pueden necesitar para reducir el ancho de banda espectador si algunas partes del terreno prims o fallan en rez. Cambio en false si necesita usar espectadores viejos que no soportan esta característica</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>saludo visor</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Espectador deja de contar a 45.000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Algo está mal en Internet</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>si</value>
   </data>
 </root>
