--- a/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.eu.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Admin Web Page</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>agenteak</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>guztiak</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Onartu edo Gods onartzeko</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>Onartu Gods</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Onartu elementuak utzi</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Bird modulua</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>Birds</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Bird Flock neurria</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Lehenetsia 'Ongi' eskualdea ez dago sistema aurkitu. Jarraitu?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Ezabatu</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>Ezabatutako</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS izena &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Ez aldatu, datu-basea dagoeneko sortu ezean ditu</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Errorea: ezin Abiarazi Downloader.exe. Beharbada eskuz abiarazi dezakezu.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>Higiezinen</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Higiezinen Kudeatzaile jainkoa da</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Karpetara gorde</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Marko tasa (0,9)</value>
+    <value>Marko tasa (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Lehenetsia 1/11 s. Lehenetsitako 0,091 bertan 1/55 FPS 5ean da</value>
@@ -892,7 +910,7 @@
     <value>Grid honen Lagunarteko izena</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL exekutatzen 55 FPS. Opensim 11 FPS da. Lehenetsia = 0,9, edo 1/11</value>
+    <value>SL exekutatzen 55 FPS. Opensim 11 FPS da. Lehenetsia = 0,0909, edo 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Aktibo fitxategiak gisa</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Good (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>Viewer Agurra</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>Grid helbidea</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>The global Marea settungs egingo eskualde honetan aplikatzen</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>The global Marea ezarpenak egingo eskualde honetan multzoa bada aplikatzen</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Eguneratzea eskuragarri dago. Ez DreamGrid irteteko eta eguneratzea instalatu nahi duzu?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>egunez manten</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Hizkuntza</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>LAN IP bat erabiltzen ari zara. Proba hau ez da betetzen.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Egin segurtasun kopia bat?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>kudeatzailea God</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Maps</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>hurrengo izena</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Pertsona ez da online</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Bat ere ez</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>Normalkuntza Eskualde</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>Offline</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Ados</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Ez dago avatar bat da</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Baliogabetzea globala Map ezarpenak inork neurri hori duen</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>Titularra God</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>paketeak</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>Baimenak</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fisika</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>irten ustekabean. Berrabiaraztea.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>RAM</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Reading eskualdea fitxategiak</value>
@@ -1777,10 +1819,10 @@
     <value>Gidoi cache</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Gidoi Timer tasa (0,9)</value>
+    <value>Gidoi Timer tasa (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Gidoi tenporizadorea abiadura ezarpena. 1/11 segundoko lehenetsia da (0,9)</value>
+    <value>Gidoi tenporizadorea abiadura ezarpena. 1/11 segundoko lehenetsia da (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Search</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim neurria</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Tamaina</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>jauzi</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Egoera</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Gidoi tenporizadorea abiadura ezarpena. 1/11 segundoko lehenetsia da (0,9)</value>
+    <value>Gidoi tenporizadorea abiadura ezarpena. 1/11 segundoko lehenetsia da (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>step1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>aldendu</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Arazoak</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Mota</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit ODE / Bullet hibridoak</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Lehenetsia: Gaituta. Erabiltzaileak ikuslearen banda zabalera murrizteko Prims batzuk edo lur zati rez huts bada behar izatea. faltsua Aldatu ikusle zaharra ez duten ezaugarri hau onartzen erabili behar baduzu</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>Viewer Agurra</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Viewer zenbaketa gelditzen 45.000 etan</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Zerbait Interneten gaizki</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Bai</value>
   </data>
 </root>
