--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Admin Verkkosivu</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>agents</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Kaikki</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Sallia tai estää Gods</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>salli Gods</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Salli kohteita lähteä</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>lintu Module</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>linnut</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Lintujen Flock Koko</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Oletuksena 'Tervetuloa' aluetta ei löydy järjestelmästä. Jatkaa?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Poistaa</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>Poistettu</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS nimi &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Älä muuta ellei tietokanta on jo luotu</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Virhe: ei voitu käynnistää Downloader.exe. Ehkä voit käynnistää sen manuaalisesti.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>omaisuus</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Estate Manager on jumala</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Kansioon tallentaaksesi</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Frame Rate (0,9)</value>
+    <value>Frame Rate (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Oletus 1/11 sekuntia. Oletus on 0,091, joka on 1 / 5th 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>Tämä Gridin Lempinimi</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL kulkee 55 FPS. Opensim on 11 FPS. Oletusarvo = 0,9, tai 1/11</value>
+    <value>SL kulkee 55 FPS. Opensim on 11 FPS. Oletusarvo = 0,0909, tai 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Varojen tiedostot</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Hyvä (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>katsoja Tervehdys</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>Grid-osoite</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Globaali Tide settungs sovelletaan tällä alueella</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>Globaali Tide asetukset koskevat tätä aluetta, jos asetettu</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Päivitys on saatavilla. Haluatko poistua DreamGrid ja asentaa päivityksen?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Säilytä päiviä</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Kieli</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Käytät LAN IP. Tämä testi ohitetaan.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Tehdä varmuuskopio?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>manager God</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Kartat</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>Seuraava Name</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Kukaan ei ole verkossa</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Ei mitään</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>normalisoitua Alueet</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>Poissa</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>kunnossa</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>On yksi avatar</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Ohittaa maailmankartalle tämän aineiston aluetta</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>omistaja Jumalan</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>pakettien</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>käyttöoikeudet</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fysiikka</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>sulkeutua odottamatta. Uudelleenkäynnistyksen.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>RAM</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Lukeminen alue tiedostoja</value>
@@ -1777,10 +1819,10 @@
     <value>Ohjelmavälimuisti</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Script Timer Hinta (0,9)</value>
+    <value>Script Timer Hinta (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Script ajastimen nopeusasetus. 1/11 toinen on oletusarvo (0,9)</value>
+    <value>Script ajastimen nopeusasetus. 1/11 toinen on oletusarvo (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Hae</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim Koko</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Koko</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Ohita</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Tila</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Script ajastimen nopeusasetus. 1/11 toinen on oletusarvo (0,9)</value>
+    <value>Script ajastimen nopeusasetus. 1/11 toinen on oletusarvo (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Vaihe 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>teleporting</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Ongelmien karttoittaminen</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Tyyppi</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit ODE / Bullet Hybrid</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Oletus: Käytössä. Käyttäjät voivat joutua pienentämään katsoja kaistanleveyttä jos jotkut prims tai maaston osia eivät Rez. Vaihda false, jos haluat käyttää vanhaa katsojille, jotka eivät tue tätä ominaisuutta</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>katsoja Tervehdys</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Katsoja pysähtyy laskemisen 45000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Jotain on vialla Internetissä</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Joo</value>
   </data>
 </root>
