--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ga.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Riarachán Leathanach Gréasáin</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>gníomhairí</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Gach</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Cheadú nó a dhícheadú Gods</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>Ceadaigh Gods</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Ceadaigh míreanna a fhágáil</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Modúl Bird</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>Éin</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Bird Flock Méid</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Níl an réigiún réamhshocraithe 'Fáilte' le fáil sa chóras. Leanúint ar aghaidh?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Scrios</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>Scriosta</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>DNS Ainm &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Ná athrú mura bhfuil an bunachar sonraí cruthaithe cheana</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Earráid: Níorbh fhéidir Seoladh Downloader.exe. B'fhéidir gur féidir leat a sheoladh de láimh.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>eastát</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Is Bainisteoir Eastát dia</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Fillteán a shábháil ar</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Ráta Fráma (0.9)</value>
+    <value>Ráta Fráma (0.0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Réamhshocrú 1/11 sec. Is Default 0.091 atá 1 / 5th de 55 CCT</value>
@@ -892,7 +910,7 @@
     <value>Seo Greille Ainm Friendly</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL Ritheann 55 CCT. Is Opensim 11 CCT. Réamhshocrú = 0.9, nó 1/11</value>
+    <value>SL Ritheann 55 CCT. Is Opensim 11 CCT. Réamhshocrú = 0.0909, nó 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Sócmhainní mar Comhaid</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Go maith (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>amharcán Beannacht</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>seoladh Greille</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Beidh na settungs Tide domhanda maidir leis an réigiún seo</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>Úsáidfear na socruithe Tide domhanda maidir le réigiún seo más leagtha</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Is Nuashonrú ar fáil. Ar mhaith leat a scoir DreamGrid agus a shuiteáil ar an nuashonrú?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Coinnigh do laethanta</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Teanga</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Tá tú ag baint úsáide as IP LAN. Tá an triail ndearna.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Déan cúltaca?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>Bainisteoir Dia</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Léarscáileanna</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>Ar Aghaidh Ainm</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Níl aon duine ar líne</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Ar bith</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>Réigiúin normalú</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>as líne</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>OK</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Tá avatar amháin</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Bíonn ceannas ceann na Socruithe Léarscáil domhanda do réigiún amháin</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>úinéir Dia</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>Parcels</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>ceadanna</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fisic</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>éirí as an tobac gan choinne. Restarting.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>Ram</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Comhaid Léitheoireachta Réigiún</value>
@@ -1777,10 +1819,10 @@
     <value>script taisce</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Script Timer Ráta (0.9)</value>
+    <value>Script Timer Ráta (0.0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Script suíomh luas uaineadóir. Is 11/01 dara default (0.9)</value>
+    <value>Script suíomh luas uaineadóir. Is 11/01 dara default (0.0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Cuardaigh</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Sim Méid</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Méid</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Scipeáil</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>stádas</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Script suíomh luas uaineadóir. Is 11/01 dara default (0.9)</value>
+    <value>Script suíomh luas uaineadóir. Is 11/01 dara default (0.0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Step1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>Teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>Teleporting</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Fabhtcheartú</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>cineál</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit Óid / Hibrid Bullet</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Réamhshocrú: Cumasaithe. Is féidir le húsáideoirí gá le laghdú a bandaleithead breathnóir má theipeann roinnt prims nó codanna tír-raon a rez. Athraigh go bréagach más rud é ní mór duit a bhaint as lucht féachana d'aois nach bhfuil tacaíocht an ghné seo</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>amharcán Beannacht</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Viewer stadanna comhaireamh ag 45,000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Tá rud éigin cearr leis an Idirlíon</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>Is ea</value>
   </data>
 </root>
