--- a/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.he.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>עמוד Admin אינטרנט</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>סוכני</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>את כל</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>להתיר או לאסור אלים</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>אלים אפשר</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>אפשר פריטים לעזוב</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>מודול בירד</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>ציפור</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>פלוק בירד גודל</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>ברירת המחדל "ברוכים הבאים" באזור לא נמצא במערכת. המשך?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>מחק</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>שנמחק</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>שם DNS &amp; Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>תיבת DOS</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>אין לשנות אלא אם הנתונים כבר נוצר</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>שגיאה: אין אפשרות להפעיל Downloader.exe. אולי אתה יכול להפעיל אותו באופן ידני.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>נכס</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>נדל"ן Manager הוא אלוהים</value>
   </data>
@@ -874,7 +892,7 @@
     <value>תיקייה כדי לשמור על</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>קצב פריימים (0.9)</value>
+    <value>קצב פריימים (0.0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>מחדל 1/11 שניות. ברירת המחדל היא 0.091 המהווה 1/5 של 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>הידידותי של גריד זה שם</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL מפעילה 55 FPS. Opensim הוא 11 FPS. ברירה = 0.9, או 1/11</value>
+    <value>SL מפעילה 55 FPS. Opensim הוא 11 FPS. ברירה = 0.0909, או 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>נכסים כקבצים</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>טוב (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>ברכת Viewer</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>גריד כתובת</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Settungs Tide העולמי יחול באזור זה</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>הגדרות Tide העולמיות תחולנה באזור זה אם סט</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>עדכון זמין. האם אתה רוצה לצאת DreamGrid ולהתקין את העדכון?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>שמור במשך ימים</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>שפה</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>אתה משתמש ה- IP LAN. בדיקה זו היא דילג.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>בצע גיבוי?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>מנהל אלוהים</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>מפות</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>הבא שם</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>אין אדם מחובר</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>אף אחד</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>אזורים לנרמל</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>מנותק</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>בסדר</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>יש avatar אחד</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>עקיפת הגדרות המפה הגלובליות באזור הזה</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>אלוהים הבעלים</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>חבילות</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>הרשאות</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>פיזיקה</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>להיסגר באופן בלתי צפוי. הפעלה מחדש.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>RAM</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>קבצי אזור רידינג</value>
@@ -1777,10 +1819,10 @@
     <value>קובץ סקריפט שמור</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>שערי טיימר סקריפט (0.9)</value>
+    <value>שערי טיימר סקריפט (0.0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>הגדרת מהירות טיימר סקריפט. השני 1/11 הוא ברירת מחדל (0.9)</value>
+    <value>הגדרת מהירות טיימר סקריפט. השני 1/11 הוא ברירת מחדל (0.0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>לחפש</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>גודל סים</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>גודל</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>לדלג</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>מצב</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>הגדרת מהירות טיימר סקריפט. השני 1/11 הוא ברירת מחדל (0.9)</value>
+    <value>הגדרת מהירות טיימר סקריפט. השני 1/11 הוא ברירת מחדל (0.0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>שלב 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>טלפורט</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>teleporting</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>פתרון תקלות</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>סוג</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit תודה / Bullet היברידי</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>ברירת מחדל: Enabled. משתמשים יכולים צריכים לצמצם את רוחב הפס הצופה אם חלק prims או חלקי השטח מצליחים ורז. שינוי ל false אם אתה צריך להשתמש צופים ישנים שאינו תומכים בתכונה זו</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>ברכת Viewer</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>מציג מפסיק לספור על 45,000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>משהו לא בסדר עם האינטרנט</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>איקס</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>כן</value>
   </data>
 </root>
