--- a/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.pl.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -138,6 +138,9 @@
   <data name="Admin_Web_Page" xml:space="preserve">
     <value>Administrator strony WWW</value>
   </data>
+  <data name="Agents" xml:space="preserve">
+    <value>Agencje</value>
+  </data>
   <data name="All" xml:space="preserve">
     <value>Wszystko</value>
   </data>
@@ -155,6 +158,9 @@
   </data>
   <data name="Allow_Gods" xml:space="preserve">
     <value>Zezwolić lub zabronić Bogowie</value>
+  </data>
+  <data name="Allow_Gods1" xml:space="preserve">
+    <value>ce Bogowie</value>
   </data>
   <data name="Allow_leave" xml:space="preserve">
     <value>Pozostawić do opuszczenia pozycji</value>
@@ -317,6 +323,9 @@
   </data>
   <data name="BirdModule" xml:space="preserve">
     <value>Moduł ptak</value>
+  </data>
+  <data name="Birds" xml:space="preserve">
+    <value>ptaki</value>
   </data>
   <data name="Bird_Flock_Size" xml:space="preserve">
     <value>Stado ptaków Rozmiar</value>
@@ -672,6 +681,9 @@
   <data name="Default_Welcome" xml:space="preserve">
     <value>Domyślną „Welcome” region nie znajduje się w systemie. Dalej?</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Usunąć</value>
+  </data>
   <data name="Deleted" xml:space="preserve">
     <value>Usunięte</value>
   </data>
@@ -740,6 +752,9 @@
   </data>
   <data name="DNS_HG_Name" xml:space="preserve">
     <value>Nazwa DNS i Hypergrid</value>
+  </data>
+  <data name="DOS_Box" xml:space="preserve">
+    <value>DOS Box</value>
   </data>
   <data name="Do_NotChange" xml:space="preserve">
     <value>Nie należy zmieniać, chyba że została już utworzona baza danych</value>
@@ -828,6 +843,9 @@
   <data name="ErrUpdate" xml:space="preserve">
     <value>Błąd: Nie można uruchomić downloader.exe. Być może można uruchomić go ręcznie.</value>
   </data>
+  <data name="Estate" xml:space="preserve">
+    <value>Osiedle</value>
+  </data>
   <data name="EstateManagerGod" xml:space="preserve">
     <value>Estate Manager jest bogiem</value>
   </data>
@@ -874,7 +892,7 @@
     <value>Folder, aby zapisać się do</value>
   </data>
   <data name="FrameRate" xml:space="preserve">
-    <value>Częstotliwość ramki (0,9)</value>
+    <value>Częstotliwość ramki (0,0909)</value>
   </data>
   <data name="FrameTime" xml:space="preserve">
     <value>Domyślnie 1/11 sekundy. Domyślna wartość to 0,091, który jest 1 / 5th 55 FPS</value>
@@ -892,7 +910,7 @@
     <value>Siatka ta jest przyjazna Nazwa</value>
   </data>
   <data name="FRText" xml:space="preserve">
-    <value>SL działa 55 fps. Opensim jest 11 FPS. Domyślnie = 0,9, lub 1/11</value>
+    <value>SL działa 55 fps. Opensim jest 11 FPS. Domyślnie = 0,0909, lub 1/11</value>
   </data>
   <data name="FSA" xml:space="preserve">
     <value>Aktywa w postaci plików</value>
@@ -921,6 +939,9 @@
   <data name="Good1" xml:space="preserve">
     <value>Dobry (Warp3D)</value>
   </data>
+  <data name="Greeting" xml:space="preserve">
+    <value>Przeglądarka życzeniami</value>
+  </data>
   <data name="Grid_address" xml:space="preserve">
     <value>adres sieci</value>
   </data>
@@ -938,9 +959,6 @@
   </data>
   <data name="GTide" xml:space="preserve">
     <value>Globalne settungs Tide będą miały zastosowanie do tego regionu</value>
-  </data>
-  <data name="gTides" xml:space="preserve">
-    <value>Globalne ustawienia Tide będą miały zastosowanie do tego regionu, jeśli zestaw</value>
   </data>
   <data name="Has_Been_DL" xml:space="preserve">
     <value>Aktualizacja jest dostępna. Chcesz wyjść DreamGrid i zainstalować aktualizację?</value>
@@ -1143,6 +1161,9 @@
   <data name="Keep_for_Days" xml:space="preserve">
     <value>Utrzymać przez kilka dni</value>
   </data>
+  <data name="Language" xml:space="preserve">
+    <value>Język</value>
+  </data>
   <data name="LAN_IP" xml:space="preserve">
     <value>Używasz IP LAN. Test ten jest pomijany.</value>
   </data>
@@ -1208,6 +1229,9 @@
   </data>
   <data name="Make_backup" xml:space="preserve">
     <value>Zrób kopię zapasową?</value>
+  </data>
+  <data name="Manager_God" xml:space="preserve">
+    <value>Menedżer Bóg</value>
   </data>
   <data name="Maps" xml:space="preserve">
     <value>Mapy</value>
@@ -1356,11 +1380,17 @@
   <data name="Next_Name" xml:space="preserve">
     <value>Następny Nazwa</value>
   </data>
+  <data name="No Autobackup" xml:space="preserve">
+    <value>No_Autobackup</value>
+  </data>
   <data name="Nobody_Online" xml:space="preserve">
     <value>Żadna osoba jest online</value>
   </data>
   <data name="None" xml:space="preserve">
     <value>Żaden</value>
+  </data>
+  <data name="Nonphysical Prim Max Size" xml:space="preserve">
+    <value>Nonphysical_Prim</value>
   </data>
   <data name="NormalizeRegions" xml:space="preserve">
     <value>normalizować Regiony</value>
@@ -1425,6 +1455,9 @@
   <data name="Offline" xml:space="preserve">
     <value>nieaktywny</value>
   </data>
+  <data name="Ok" xml:space="preserve">
+    <value>Dobrze</value>
+  </data>
   <data name="OneAvatar" xml:space="preserve">
     <value>Jest jeden awatar</value>
   </data>
@@ -1452,6 +1485,9 @@
   <data name="OverridesMap" xml:space="preserve">
     <value>Zastępuje mapie globalnej ustawień dla tego jednego regionu</value>
   </data>
+  <data name="Owner_God" xml:space="preserve">
+    <value>Właściciel Bóg</value>
+  </data>
   <data name="Parcels" xml:space="preserve">
     <value>paczki</value>
   </data>
@@ -1472,6 +1508,9 @@
   </data>
   <data name="Permissions" xml:space="preserve">
     <value>Uprawnienia</value>
+  </data>
+  <data name="Physical Prim Max Size" xml:space="preserve">
+    <value>Physical_Prim</value>
   </data>
   <data name="Physics" xml:space="preserve">
     <value>Fizyka</value>
@@ -1544,6 +1583,9 @@
   </data>
   <data name="Quit_unexpectedly" xml:space="preserve">
     <value>nieoczekiwanie zamknięty. Ponowne uruchomienie.</value>
+  </data>
+  <data name="RAM" xml:space="preserve">
+    <value>Baran</value>
   </data>
   <data name="Reading_Region_files" xml:space="preserve">
     <value>Pliki Reading Region</value>
@@ -1777,10 +1819,10 @@
     <value>cache script</value>
   </data>
   <data name="Script_Timer_Rate" xml:space="preserve">
-    <value>Skrypt czasowy Rate (0,9)</value>
+    <value>Skrypt czasowy Rate (0,0909)</value>
   </data>
   <data name="Script_Timer_Text" xml:space="preserve">
-    <value>Skrypt ustawienie prędkości timera. 1/11 sekundy jest domyślnie (0,9)</value>
+    <value>Skrypt ustawienie prędkości timera. 1/11 sekundy jest domyślnie (0,0909)</value>
   </data>
   <data name="Search" xml:space="preserve">
     <value>Szukaj</value>
@@ -1878,6 +1920,9 @@
   <data name="Sim_Size" xml:space="preserve">
     <value>Rozmiar Sim</value>
   </data>
+  <data name="Size" xml:space="preserve">
+    <value>Rozmiar</value>
+  </data>
   <data name="Skip" xml:space="preserve">
     <value>Pominąć</value>
   </data>
@@ -1957,7 +2002,7 @@
     <value>Status</value>
   </data>
   <data name="STComment" xml:space="preserve">
-    <value>Skrypt ustawienie prędkości timera. 1/11 sekundy jest domyślnie (0,9)</value>
+    <value>Skrypt ustawienie prędkości timera. 1/11 sekundy jest domyślnie (0,0909)</value>
   </data>
   <data name="Step1" xml:space="preserve">
     <value>Krok 1:</value>
@@ -2003,6 +2048,9 @@
   </data>
   <data name="Teleport" xml:space="preserve">
     <value>teleport</value>
+  </data>
+  <data name="Teleporter Enable" xml:space="preserve">
+    <value>Teleporter_Enable</value>
   </data>
   <data name="Teleporting" xml:space="preserve">
     <value>teleportacji</value>
@@ -2057,6 +2105,9 @@
   </data>
   <data name="Troubleshooting" xml:space="preserve">
     <value>Rozwiązywanie problemów</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Rodzaj</value>
   </data>
   <data name="UbitHybrid" xml:space="preserve">
     <value>Ubit ODE / Bullet Hybrid</value>
@@ -2120,9 +2171,6 @@
   </data>
   <data name="Viewer_Cache_text" xml:space="preserve">
     <value>Ustawienie domyślne: Enabled. Użytkowników może zmniejszyć przepustowość widza jeśli niektóre Prims lub części terenu nie rez. Zmiana na false, jeśli chcesz używać starych widzów, które nie obsługują tej funkcji</value>
-  </data>
-  <data name="Viewer_Greeting" xml:space="preserve">
-    <value>Przeglądarka życzeniami</value>
   </data>
   <data name="Viewer_Stops_Counting" xml:space="preserve">
     <value>Przeglądarka zatrzymuje zliczanie na 45.000</value>
@@ -2201,5 +2249,14 @@
   </data>
   <data name="Wrong" xml:space="preserve">
     <value>Coś jest nie tak z Internetem</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
+  </data>
+  <data name="Y" xml:space="preserve">
+    <value>Y</value>
+  </data>
+  <data name="Yes" xml:space="preserve">
+    <value>tak</value>
   </data>
 </root>
